/**
 * 编译工具版本
 */
syntax = "proto3";
/**
 * 指定生成实体
 */
option java_multiple_files = true;
/**
 * 指定生成接口
 */
option java_generic_services = true;
/**
 * 声明包
 */
package com.grpc.grpcserver.server;
/**
 *声明实体
 */
message Person {
  string first_name = 1;
  string last_name = 2;
}

message Greeting {
  string message = 1;
}
/**
 * 声明接口
 */
service HelloWorldService {
  rpc sayHello (Person) returns (Greeting);
}
